<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepairOrderActivity">

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="129dp" />

    <EditText
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/labor_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/technitianLabel"
        android:layout_width="141dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:text="@string/technitian"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <EditText
        android:id="@+id/laborText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/labor_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/laborLabel" />

    <EditText
        android:id="@+id/technitianText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/technitian_hint"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/technitianLabel" />

    <EditText
        android:id="@+id/partsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Parts_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/partsLabel" />

    <EditText
        android:id="@+id/paintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/paint_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/paintLabel" />

    <EditText
        android:id="@+id/inspectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/inspection_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/inspectionLabel" />

    <TextView
        android:id="@+id/inspectionLabel"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginTop="89dp"
        android:text="@string/inspection"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/paintLabel"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginTop="148dp"
        android:text="@string/paint"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/partsLabel"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginTop="212dp"
        android:text="@string/parts"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/laborLabel"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginTop="272dp"
        android:text="@string/labor"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="483dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:text="@string/repair_order"
        android:textAlignment="center"
        android:textColor="#100808"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:text="@string/order_type"
        android:textColor="#404040"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Header"
        app:layout_constraintTop_toBottomOf="@+id/Header" />

    <EditText
        android:id="@+id/subtotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/money_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/subtotalLabel"
        tools:layout_editor_absoluteX="202dp" />

    <EditText
        android:id="@+id/taxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/money_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taxLabel"
        tools:layout_editor_absoluteX="202dp" />

    <EditText
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/money_hint"
        app:layout_constraintTop_toTopOf="@+id/totalLabel"
        tools:layout_editor_absoluteX="202dp" />

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subtotalText"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/taxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="634dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taxLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>